src/assets/stylesheets/SchoolOnboarding.scss
@use "./rpf_design_system/spacing" as *;
@use "./rpf_design_system/font-size" as *;
@use "./rpf_design_system/font-weight" as *;
@use "./rpf_design_system/colours" as *;
@use "./rpf_design_system/mixins" as *;

.school-onboarding-wrapper {
  display: flex;
  flex-direction: column;
  padding: var(--space-3);
  align-items: center;
  gap: var(--space-2);
  flex: 1 0 0;
  align-self: stretch;

  @media screen and (min-width: 768px) {
    padding: var(--space-8) calc(1.5 * var(--space-10));
    gap: var(--space-8);
  }

  a {
    border: none;
    font-weight: $font-weight-bold;
  }
}

.school-onboarding__text--bold {
  font-weight: $font-weight-bold;
}

/* Projects */

.school-onboarding__text {
  display: flex;
  flex-direction: row;
}

.school-onboarding__title {
  @include font-size-1-5(regular);
  margin: var(--space-2);

  @media screen and (min-width: 768px) {
    @include font-size-4(regular);
  }
}

.school-onboarding-form {
  background-color: $rpf-white;
  border: 2px solid #d5d7dc;
  border-radius: 8px;
  max-inline-size: 600px;
  text-align: start;
  padding: var(--space-3);

  @media screen and (min-width: 768px) {
    min-inline-size: 600px;
  }
}

.school-onboarding-form__title {
  @include font-size-2(regular);
  font-weight: $font-weight-bold;
  margin-block: var(--space-3);
}

.school-onboarding-form__subtitle {
  @include font-size-1-5(bold);
  margin-block: var(--space-3);
}

.school-onboarding-form__text {
  margin-block-end: var(--space-3);
}

.school-onboarding-form__section {
  border-block-start: 1px solid var(--rpf-grey-150);
  border-block-end: 1px solid var(--rpf-grey-150);
  margin-block: var(--space-3);
}

.school-onboarding-form__list {
  padding-left: var(--space-3);
  margin-block-end: var(--space-3);
}

.school-onboarding-form__list-item::marker {
  color: $rpf-teal-800;
}

.school-onboarding-form__buttons {
  flex-direction: column;
  gap: var(--space-2);
  display: flex;
  justify-content: center;
  align-items: center;
  margin-block-start: var(--space-3);

  @media screen and (min-width: 768px) {
    flex-direction: row;
    justify-content: flex-end;
  }
}

.school-onboarding__button {
  flex: 1;
  width: -webkit-fill-available;
  justify-content: center;
  align-items: center;

  @media screen and (min-width: 768px) {
    flex: inherit;
    width: fit-content;
  }
}

.rpf-accordion {
  border: 1px solid var(--rpf-grey-50);
  border-radius: var(--space-1);
}

.rpf-accordion__title {
  @include font-size-1(regular);
}

